--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -83,7 +83,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			<div id="Separador_Dir">
 				<h2 style="font-family: 'Georgia'; color:  White; font-size:2.1vw;">O que exatamente é a tecnologia RPA?</h2>
-			<p style="font-family: 'Mulish', sans-serif; color:  White; text-align: justify; font-size: 1vw;"><b>
+			<p style="font-family: 'Lucida Sans Unicode'; color:  White; text-align: justify; font-size: 1vw;"><b>
 			A sigla RPA, significa Robotic Process Automation, e representa a ideia de automatizar processos de trabalho de forma 100% digital, utilizando ferramentas específicas desta tecnologia.
 			O RPA é algo que está sendo cada vez mais utilizado em pequenos, médios e grandes segmentos do mercado por ser uma forma fácil e versátil de substituir tarefas massivas e repetitivas em algo totalmente autônomo.
 			Demandas de diversos tipos podem ser automatizadas com RPA!</b>
@@ -94,7 +94,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<div id="Conteudo_par" style="height: 46vh;">
 			<div id="Separador_Esq" style="padding-left: 1%;">
-				<h2 style="font-size:1.6vw;font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
+				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
 			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
@@ -103,7 +103,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 
 			</div>
 			<div id="Separador_Dir">
-				<h2 style="font-size:1.6vw;font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
+				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
 			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div>
 		<div id="Conteudo_par" style="height: 50%;">
 			<div id="Separador_Esq" style="padding-left: 1%;">
-				<h2 style="font-size:1.6vw;font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
+				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
@@ -125,7 +125,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 			</div>
 			<div id="Separador_Dir">
-				<h2 style="font-size:1.6vw;font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro,<br> é presente!</h2>
+				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro,<br> é presente!</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
 			Pode parecer redundância, mas não é, se você não usufrui de demandas automatizadas em sua organização
 			até os dias atuais,	provavelmente você está ficando para trás. Automações estão presentes em todos os lugares,
@@ -168,7 +168,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			O RPA é algo que está sendo cada vez mais utilizado em pequenos, médios e grandes segmentos do mercado por ser uma forma fácil e versátil de substituir tarefas massivas e repetitivas em algo totalmente autônomo.
 			Demandas de diversos tipos podem ser automatizadas com RPA!</b>
 			</p>
-				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
+				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw);font-family: 'Verdana'; color:black;text-align: justify;">
 			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
@@ -176,7 +176,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			onde de fato um humano é necessário.</p>
 
 
-				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
+				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
 			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
@@ -185,7 +185,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
                 <img src="Imagens/icon.png" style="width: Calc( 40vh + 40vw);margin-top: Calc( 2vh + 2vw);" >
 
-				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
+				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
@@ -193,7 +193,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			um projeto pronto para ser implantado.</p>
 				
 
-				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Mulish', sans-serif; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro, é presente!</h2>
+				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro, é presente!</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black;text-align: justify;">
 			Pode parecer redundância, mas não é, se você não usufrui de demandas automatizadas em sua organização
 			até os dias atuais,	provavelmente você está ficando para trás. Automações estão presentes em todos os lugares,
