--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -4,6 +4,9 @@
 	<head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="Bulb - Entregamos soluções de automatização de demandas de processos de negócios e TI. Com o RPA de uma forma acessível para todos, você pode aplicar robôs em departamentos como financeiro e contábil para otimizar tarefas repetitivas, adquirir economia por meio de ROI e entrar no universo da tecnologia da informação. 
@@ -130,7 +133,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="clubs"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/open4.png" style="margin-top: -2%; width: 20vw; height: 37vh;"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;font-family: Garamond;font-size: 1.3vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size: 1.3vw; text-align:justify;">
 									<br>
 									O Open RPA é uma ferramenta de automação de processo pouco utilizada no mercado<br> mas com 
 									um potencial enorme de crescimento. A partir do custo zero para aquisição<br> e da fácil implementação
@@ -142,7 +145,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="hearts"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/Automate fundo Branco.png" style="margin-top: 1%; height: Calc(11vh + 11vw);"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;font-family: Garamond;font-size: 1.3vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size: 1.3vw; text-align:justify;">
 									<br>
 									O Automate é uma das mais econômicas ferramentas de RPA do mercado, com uma <br>interface simples e amigável,
 									é uma ótima opção para usuários sem muita experiência,<br> por proporcionar organização de demandas
@@ -153,7 +156,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="spades"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/UIPATH1.png" style="width: 34vw; height: 28vh;"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;font-family: Garamond;font-size:  1.3vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
 									UiPath é um dos líderes de mercado de RPA, a ferramenta com o maior índice de <br> crescimento dos últimos tempos,
 									atingiu este patamar com uma avançada interface de <br>funcionalidades para automatização de tarefas simples às mais avançadas.
@@ -163,7 +166,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 							<label for="diamonds"><img  src="Imagens/Logo1.png" style="width: 8vw; height: 9vh;"><br>
 								<div id="Separador_Esq_carroussel"><img  src="Imagens/Automation-anywhere1.png" style="width: 34vw; height: 28vh;"></div>
 								<div id="Separador_Dir_carroussel">
-									<p class="carroussel" style=" margin-left: -7%;font-family: Garamond;font-size:  1.3vw; text-align:justify;">
+									<p class="carroussel" style=" margin-left: -7%;style="font-family:'Mulish', sans-serif;font-size:  1.3vw; text-align:justify;">
 									<br>
 									O Automation Anywhere é uma das maiores tendências do mercado de RPA atualmente,<br>
 									além de ser uma plataforma de fácil manipulação, se destaca por ser completa e possuir <br>
