--- a/Contatos.html
+++ b/Contatos.html
@@ -5,6 +5,9 @@
 	<head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="Bulb - Entregamos soluções de automatização de demandas de processos de negócios e TI. Com o RPA de uma forma acessível para todos, você pode aplicar robôs em departamentos como financeiro e contábil para otimizar tarefas repetitivas, adquirir economia por meio de ROI e entrar no universo da tecnologia da informação. 
@@ -74,9 +77,9 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<div id="Conteudo_Contatos_topo" >
 
 				<h2 style="margin-top: Calc( 20vh + 20vw ); font-family: 'Georgia'; font-size: Calc( 1.7vh + 1.7vw); color: white;">Em caso de dúvidas ou mais informações:</h2>
-				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
-				<h3 style=" font-family: 'Georgia'; font-size: Calc( 2vh + 2vw) ; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
-				<h3 style=" font-family: 'Georgia'; font-size:  Calc( 2vh + 2vw); color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">contato@bulbautomacoes.com.br</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: Calc( 2vh + 2vw) ; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif;  Calc( 2vh + 2vw); color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">contato@bulbautomacoes.com.br</h3>
 				<img src="Imagens/Indexlogo.png" style="margin-top: Calc( 5vh + 5vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
 				
 				</div>
@@ -92,10 +95,10 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Conteudo_contatos">
 				<div id="Conteudo_Contatos_topo" >
 
-				<h2 style=" font-family: 'Georgia'; font-size: 2.2vw; color: white;">Em caso de dúvidas ou mais informações:</h2>
-				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
-				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
-				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
+				<h2 style=" font-family: 'Mulish', sans-serif; font-size: 2.2vw; color: white;">Em caso de dúvidas ou mais informações:</h2>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 95841-4882</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
+				<h3 style=" font-family: 'Mulish', sans-serif; font-size: 1.6vw; color: #ccc;"><u>E-mail:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
 				<img src="Imagens/bulb prata 50 1.png" style="margin-top: Calc( 1vh + 1vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
 				</div>
 
